# feedland-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  SKILL.md  config.example.json  config.json  pyproject.toml  setup.cfg  test_concurrent_blacklist.py  test_concurrent_issue.py
examples/: example_usage.py
openspec/: config.yaml
openspec/changes/parse-feedland-updates/: design.md  proposal.md  tasks.md
openspec/changes/parse-feedland-updates/specs/article-deduplication/: spec.md
openspec/changes/parse-feedland-updates/specs/article-extractor/: spec.md
openspec/changes/parse-feedland-updates/specs/feed-tracker/: spec.md
openspec/changes/parse-feedland-updates/specs/feedland-opml-parser/: spec.md
openspec/changes/parse-feedland-updates/specs/mixed-feed-parser/: spec.md
output/: results.json
src/feedland_parser/: __init__.py  article_extractor.py  cli.py  config.py  deduplicator.py  domain_blacklist.py  feed_parser.py  filter.py  logger.py  opml_parser.py  parallel_processor.py  tracker.py
tests/: test_article_extraction_real.py  test_article_extractor.py  test_cli.py  test_cli_extended.py  test_config.json  test_config.py  test_content_validation.py  test_deduplicator.py  test_domain_blacklist.py  test_domain_blacklist_concurrent.py  test_e2e.py  test_encoding_fix.py  test_extraction.py  test_feed_parser.py  test_feed_parser_html.py  test_filter.py  test_html_stripping.py  test_integration.py  test_opml_parser.py  test_parallel_processor.py  test_performance.py  test_quick.py  test_rss_link.py  test_tracker.py
