[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yonglelaoren-feedland-parser"
version = "1.0.1"
description = "从 Feedland OPML 解析和提取 RSS/Atom feeds 文章内容"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "yonglelaoren", email = "yonglelaoren@example.com"}
]
keywords = ["rss", "atom", "feed", "parser", "feedland", "newspaper3k"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "feedparser>=6.0.10",
    "newspaper3k>=0.2.8",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "lxml-html-clean>=0.1.0",
    "python-dateutil>=2.8.2",
    "cloudscraper>=1.2.71",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]
build = [
    "build>=0.10.0",
    "twine>=4.0.0",
]
exe = [
    "pyinstaller>=5.13.0",
]

[project.scripts]
yonglelaoren-feedland-parser = "feedland_parser.cli:main"

[project.urls]
Homepage = "https://github.com/yonglelaoren/yonglelaoren-feedland-parser"
Documentation = "https://github.com/yonglelaoren/yonglelaoren-feedland-parser#readme"
Repository = "https://github.com/yonglelaoren/yonglelaoren-feedland-parser.git"
Issues = "https://github.com/yonglelaoren/yonglelaoren-feedland-parser/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true