[metadata]
name = yonglelaoren-feedland-parser
version = 1.0.0
description = 从 Feedland OPML 解析和提取 RSS/Atom feeds 文章内容
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yonglelaoren/yonglelaoren-feedland-parser
author = yonglelaoren
author_email = yonglelaoren@example.com
license = MIT
license_files = LICENSE
keywords = rss, atom, feed, parser, feedland, newspaper3k
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    feedparser>=6.0.10
    newspaper3k>=0.2.8
    beautifulsoup4>=4.12.0
    requests>=2.31.0
    lxml>=4.9.0
    python-dateutil>=2.8.2

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.4.0

[options.entry_points]
console_scripts =
    yonglelaoren-feedland-parser = feedland_parser.cli:main

[tool:pytest]
testpaths = tests
python_files = test_*.py

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True